@@ -1,5 +1,6 @@
 v1.1.1 - Pending
 	+ Bug: A 2nd instance isn't prevented with dbus/python 2.4 (Sebastian)
+	+ Bug: Incorrect artist can sometimes be set for album art/info (vEX)
 
 v1.1 - May 7, 2007
 	+ Ctrl-J for xmms-like search filter (vEX/Eduard)
